Fix styling based on PR review feedback to better align things with the designs.

--- a/src/components/Office/DefinitionLists/ShipmentDefinitionLists.module.scss
+++ b/src/components/Office/DefinitionLists/ShipmentDefinitionLists.module.scss
@@ -63,6 +63,12 @@
   flex-grow: 1;
 }
 
+.ppmRightLonerDataRow {
+  border-bottom-color: $base-lighter;
+  border-bottom-width: 1px !important;
+  border-bottom-style: solid;
+}
+
 
 
 
